applications/openeuler-software-package/gitee-robot/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitee-robot
  namespace: openeuler-software-pkg
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: gitee-robot
  template:
    metadata:
      labels:
        app: gitee-robot
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: gitee-robot
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/software-package-gitee-robot:v1.0.20230330141847
        args:
        - --port=8888
        - --config-file=/opt/app/config/config.yaml
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - mountPath: /opt/app/config/config.yaml
          name: robot-configmap
          subPath: config.yaml
      volumes:
      - configMap:
          defaultMode: 420
          name: robot-configmap
        name: robot-configmap
      - name: software-pkg-secret
        secret:
          secretName: software-pkg-secret
