applications/openeuler-software-package/gitee-robot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: software-pkg-api-ingress
  namespace: openeuler-software-pkg
spec:
  tls:
    - hosts:
        - software-pkg.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: software-pkg.openeuler.org
      http:
        paths:
        - backend:
            serviceName: robot-gitee-service
            servicePort: 80
          path: /gitee-hook
